# pkcs11-tools

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  COPYING  LICENSE.md  Makefile.am  Makefile.in  README.md  aclocal.m4  bootstrap.sh  buildx.sh  configure  configure.ac  password.sh  repoTagData.json  with_aws  with_beid  with_gdb_and_nss  with_gdb_and_nss_src  with_gemalto  with_kdbg_and_nss  with_kryoptic  with_luna  with_nfast  with_nss  with_nss_and_logger  with_nss_dest  with_nss_src  with_pkcs11_common  with_softhsm  with_utimaco  with_yubico
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-and-check.yml  codeql.yml  github-build-ubuntu-latest.yml
buildx/: Dockerfile.alpine321  Dockerfile.amzn2023  Dockerfile.deb12  Dockerfile.mingw64  Dockerfile.ol7  Dockerfile.ol8  Dockerfile.ol9  Dockerfile.ubuntu2004  Dockerfile.ubuntu2204  Dockerfile.ubuntu2404
completion/: p11-common  p11cat  p11cp  p11kcv  p11ls  p11more  p11mv  p11od  p11setattr
completion/bash/: p11-common  p11cat  p11cp  p11importcert  p11importdata  p11importpubk  p11init  p11kcv  p11keycomp  p11keygen  p11ls  p11mkcert  p11more  p11mv  p11od  p11req  p11rewrap  p11rm  p11setattr  p11slotinfo  p11unwrap  p11wrap
completion/zsh/: _p11tools.in
docs/: CONTRIBUTING.md  INSTALL.md  MANUAL.md  TPLICENSES.md
gl/: .gitignore  Makefile.am  Makefile.in  regex_internal.c  termios.in.h
include/: .gitignore  config.h.in  pkcs11lib.h
include/cryptoki/: awscloudhsm.h  cryptoki.h  ct-kip.h  nss.h  otp-pkcs11.h  pkcs-11v2-20a3.h  pkcs11-v3backport.h  pkcs11.h  pkcs11extra.h  pkcs11f.h  pkcs11t.h  yubico.h
lib/: .gitignore  Makefile.am  Makefile.in  attribctx_helper.c  attribctx_helper.h  attribctx_lexer.c  attribctx_lexer.h  attribctx_lexer.l  attribctx_parser.c  attribctx_parser.h  attribctx_parser.y  cmdline_helper.c  cmdline_helper.h  cmdline_lexer.c  cmdline_lexer.h  cmdline_lexer.l  cmdline_parser.c  cmdline_parser.h  cmdline_parser.y  gen_attrinfo_h.pl  gen_mechinfo_h.pl  pkcs11_attr.c  pkcs11_attrdesc.c  pkcs11_attribctx.c  pkcs11_cat.c  pkcs11_cert.c  pkcs11_cert_common.c  pkcs11_chattr.c  pkcs11_cmdla.c  pkcs11_context.c  pkcs11_cp.c  pkcs11_data.c  pkcs11_dh.c  pkcs11_dsa.c  pkcs11_ec.c  pkcs11_error.c  pkcs11_init.c  pkcs11_kcv.c  pkcs11_keycomp.c  pkcs11_keygen.c  (+49 more)
m4/: ax_create_target_h.m4  ax_with_dmalloc.m4  gnulib-cache.m4  gnulib-comp.m4  local_fix_bswap.m4
src/: .gitattributes  .gitignore  Makefile.am  Makefile.in  masqreq.c  p11cat.c  p11cp.c  p11importcert.c  p11importdata.c  p11importpubk.c  p11init.c  p11kcv.c  p11keycomp.c  p11keygen.c  p11ls.c  p11mkcert.c  p11more.c  p11mv.c  p11od.c  p11req.c  p11rewrap.c  p11rm.c  p11setattr.c  p11slotinfo.c  p11unwrap.c  p11wrap.c  version.c  win_applink.c
test/: bigbigsan1000.sh  bigbigsan150.sh  bigsan.sh  littlesan.sh  reqtestcases.sh  san100gdb.sh  san125.sh  san138.sh  san144.sh  san150.sh  san50.sh  test.py  with_nss
tests/: Makefile.am  common.sh  mock_common.sh  nss_common.sh
tests/integration/: attr_od.sh  cat_extended.sh  dsa_sign.sh  eddsa_sign.sh  envelope.sh  filters.sh  import.sh  importcert.sh  importpubk.sh  init.sh  init_interactive.sh  init_validation.sh  jwk.sh  keygen_all_types.sh  keygen_ls_req.sh  keygen_options.sh  keytypes.sh  masqreq.sh  mkcert.sh  mkcert_options.sh  mock_faults.sh  mock_init.sh  mock_keycomp.sh  mock_pqc.sh  more.sh  nss_mode.sh  nss_wrap.sh  objmgmt.sh  od_cat_types.sh  od_more.sh  pin_prompt.sh  pubk_render.sh  render_more_types.sh  req_options.sh  rewrap.sh  setattr_cpmv.sh  slot_prompt.sh  slotinfo.sh  slotinfo_ec.sh  symkeys_kcv.sh  (+7 more)
tests/mock/: mock_pkcs11.c
tests/preload/: notty.c
tests/unit/: test_attribctx.c  test_ec.c  test_error.c  test_harness.h  test_pqc.c  test_template.c  test_utils.c  test_version.c  test_wrappedkey.c
